languages/montiarc-fe/src/test/resources/contextconditions/invalid/Subcomponent.arc
package invalid;

component Subcomponent(String s) {
 
}